# pydantic-ai-cloudflare

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pip-audit.yml  semgrep.yml
examples/: code_mode_research.py  complex_schema.py  persistent_chat.py  rag_pipeline.py  research_agent.py  simple_chat.py  structured_output.py
notebooks/: 01_getting_started.ipynb  02_web_research.ipynb  03_rag_pipeline.ipynb  04_persistent_chat.ipynb  05_code_mode_monty.ipynb  06_complex_structured_output.ipynb  07_knowledge_graph.ipynb  08_structured_output_deep_dive.ipynb
src/pydantic_ai_cloudflare/: __init__.py  _auth.py  _errors.py  _http.py  agent.py  ai_search.py  browser_run.py  d1.py  data_profiler.py  embeddings.py  feature_engine.py  gateway.py  graph.py  knowledge.py  models.py  profiles.py  provider.py  structured.py  vectorize.py  visualization.py
tests/: conftest.py  test_agent.py  test_browser_run.py  test_cf_structured.py  test_d1.py  test_embeddings.py  test_gateway.py  test_graph.py  test_graph_v021.py  test_graph_v022.py  test_graph_v023.py  test_graph_v2.py  test_knowledge.py  test_profiler.py  test_provider.py  test_response_hook.py  test_structured.py  test_vectorize.py
